--- a/code/about.html
+++ b/code/about.html
@@ -8,30 +8,33 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 
-<header class="simple-header">
-    <nav class="nav">
-        <input type="checkbox" id="checkbox">
-        <label for="checkbox"><a class="menu-button"></a>
-        </label>
-        <div class="menu-content">
-            <a href="index.html" target="blank">home</a>
-            <a href="contacts.html" target="blank">contact</a>
-            <a href="signup.html" target="blank">sign up</a>
-            <a href="login.html" target="blank">login</a>
+<body>
+    <header class="simple-header">
+        <div class="nav-wrapper">
+            <a class="menu-button"></a>
+            <nav class="nav">
+                <a href="index.html" target="blank">home</a>
+                <a href="contacts.html" target="blank">contact</a>
+                <a href="signup.html" target="blank">sign up</a>
+                <a href="login.html" target="blank">login</a>
+            </nav>
         </div>
-    </nav>
-    <div class="logo"><img src="./pictures/logo_space.svg"></div>
-    <div class="logo-simple"><img src="./pictures/logo_space_simple.svg"></div>
-</header>
+        <div class="logo">
+            <img src="./pictures/logo_space.svg">
+        </div>
+        <div class="logo-simple">
+            <img src="./pictures/logo_space_simple.svg">
+        </div>
+    </header>
 
-<footer class="footer">
-    <div class="footer-wrapper">
-        <p>&copy; Pauline Andersson 2021</p>
-        <container class="footer-img-container">
-            <img src="./pictures/logo.svg">
-            </contaier>
-    </div>
-</footer>
+    <footer class="footer">
+        <div class="footer-wrapper">
+            <p>&copy; Pauline Andersson 2021</p>
+            <div class="footer-img-container">
+                <img src="./pictures/logo.svg">
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
