--- a/code/login.html
+++ b/code/login.html
@@ -8,43 +8,48 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 
-<header class="simple-header">
-  <nav class="nav">
-    <input type="checkbox" id="checkbox">
-    <label for="checkbox"><a class="menu-button"></a>
-    </label>
-    <div class="menu-content">
-      <a href="index.html" target="blank">home</a>
-      <a href="contacts.html" target="blank">contact</a>
-      <a href="about.html" target="blank">about</a>
-      <a href="signup.html" target="blank">sign up</a>
+<body>
+  <header class="simple-header">
+    <div class="nav-wrapper">
+      <a class="menu-button"></a>
+      <nav class="nav">
+        <a href="index.html" target="blank">home</a>
+        <a href="contacts.html" target="blank">contact</a>
+        <a href="about.html" target="blank">about</a>
+        <a href="signup.html" target="blank">sign up</a>
+      </nav>
     </div>
-  </nav>
-  <div class="logo"><img src="./pictures/logo_space.svg"></div>
-  <div class="logo-simple"><img src="./pictures/logo_space_simple.svg"></div>
-</header>
+    <div class="logo">
+      <img src="./pictures/logo_space.svg">
+    </div>
+    <div class="logo-simple">
+      <img src="./pictures/logo_space_simple.svg">
+    </div>
+  </header>
 
-<section class="form-section">
-  <form class="form">
-    <div class="form-row"><h2>LOGIN</h2>
-    <h3>Don't got an account? <br><a href="signup.html">Sign up!</a></h3><br><br><br> </div>
-    <div class="form-row"><label for="username">Username:</label><br>
-    <input type="text" id="username" name="username" placeholder="Your username" required><br>
-    <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" placeholder="Your password" minlength="8" maxlength="12"
-      required><br>
-    <input type="submit" value="Login"></div>
-  </form>
-</section>
+  <section class="form-section">
+    <form class="form">
+      <div class="form-row">
+        <h2>LOGIN</h2>
+        <h3>Don't got an account? <a href="signup.html">Sign up!</a></h3>
+      </div>
+      <div class="form-row"><label for="username">Username:</label>
+        <input type="text" id="username" name="username" placeholder="Your username" required>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Your password" minlength="8" maxlength="12"
+          required>
+        <input type="submit" value="Login"></div>
+    </form>
+  </section>
 
-<footer class="footer">
-  <div class="footer-wrapper">
-    <p>&copy; Pauline Andersson 2021</p>
-    <container class="footer-img-container">
-      <img src="./pictures/logo.svg">
-      </contaier>
-  </div>
-</footer>
+  <footer class="footer">
+    <div class="footer-wrapper">
+      <p>&copy; Pauline Andersson 2021</p>
+      <div class="footer-img-container">
+        <img src="./pictures/logo.svg">
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
