--- a/code/index.html
+++ b/code/index.html
@@ -46,8 +46,7 @@
     <div class="big-text-container">
       <h2>TOP NEWS</h2>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi,rerum placeat,
-        quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi minima!
+        eligendi,rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi minima!
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
         <a class="links" href="https://www.nasa.gov/" target="_blank">&gt; Keep reading &lt;</a>
       </p>
@@ -85,8 +84,8 @@
     </div>
     <div class="grid-wrapper">
       <h3>Small news</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam recusandae saepe reiciendis!
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a auteligendi,
+        rerum placeat, quibusdam recusandae saepe reiciendis!
         <a class="links" href="c" target="_blank">More -&gt;</a>
       </p>
     </div>
@@ -97,8 +96,8 @@
     </div>
     <div class="grid-wrapper">
       <h3>Small news</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a auteligendi,
+        rerum placeat
         <a class="links" href="d" target="_blank">More -&gt;</a>
       </p>
     </div>
@@ -109,8 +108,8 @@
     </div>
     <div class="grid-wrapper">
       <h3>Small news</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a auteligendi,
+        rerum placeat, quibusdam
         <a class="links" href="e" target="_blank">More -&gt;</a>
       </p>
     </div>
@@ -121,8 +120,8 @@
     </div>
     <div class="grid-wrapper">
       <h3>Small news</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a auteligendi,
+        rerum placeat, quibusdam
         <a class="links" href="f" target="_blank">More -&gt;</a>
       </p>
     </div>
@@ -155,8 +154,8 @@
     </div>
     <div class="grid-wrapper">
       <h3>Small news</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam recusandae saepe reiciendis!
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a auteligendi,
+        rerum placeat, quibusdam recusandae saepe reiciendis!
         <a class="links" href="i" target="_blank">More -&gt;</a>
       </p>
     </div>
@@ -167,8 +166,8 @@
     </div>
     <div class="grid-wrapper">
       <h3>Small news</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a auteligendi,
+        rerum placeat
         <a class="links" href="j" target="_blank">More -&gt;</a>
       </p>
     </div>
@@ -179,8 +178,8 @@
     </div>
     <div class="grid-wrapper">
       <h3>Small news</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a auteligendi,
+        rerum placeat, quibusdam
         <a class="links" href="k" target="_blank">More -&gt;</a>
       </p>
     </div>
@@ -191,8 +190,8 @@
     </div>
     <div class="grid-wrapper">
       <h3>Small news</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-        eligendi, rerum placeat, quibusdam
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a auteligendi,
+        rerum placeat, quibusdam
         <a class="links" href="l" target="_blank">More -&gt;</a>
       </p>
     </div>
