changed linebrakes on line 16-31 and css on line 18

--- a/code/index.html
+++ b/code/index.html
@@ -1,94 +1,98 @@
   <!DOCTYPE html>
   <html>
-    <head>
-      <meta charset="utf-8" />
-      <title>Project 2: Pancakes</title>
-      <link rel="stylesheet" href="./style.css" />
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
 
-      <!--HEADER: LOGO & NAVBAR-->
-      <header class="header container">
+  <head>
+    <meta charset="utf-8" />
+    <title>Project 2: Pancakes</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+
+  <body>
+
+    <!--HEADER: LOGO & NAVBAR-->
+    <header class="header container">
+      <a href="#">
+        <img class="logo" src="./img/iconpancake.JPG" alt="pancake icon">
+      </a>
+      <nav class="navigation">
         <a href="#">
-        <img class="logo" src="./img/iconpancake.JPG" alt="pancake icon"></a>
-
-          <nav class="navigation">
-            <a href="#">
-            <div class="navigation-text">About</div>
-          </a>
-          <a href="#"> 
+          <div class="navigation-text">About</div>
+        </a>
+        <a href="#">
           <div class="navigation-text">How to vote</div>
-          </a> 
-          <a href="#">    
+        </a>
+        <a href="#">
           <div class="navigation-text">How to compete</div>
         </a>
-          </nav>
-      </header>
+      </nav>
+    </header>
 
     <!--HEADLINE-->
     <div class="headline">
       <h1>Who has the best pancakes?</h1>
-      <p>Take your vote!</p> 
-      </div>
+      <p>Take your vote!</p>
+    </div>
     <div>
 
       <!--BIG-->
       <section class="big-news">
         <div class="big-news-card">
           <img src="./img/pancake-1984712_1280.jpg" alt="pankcake">
-            <div>
+          <div>
             <h2>The winner from last year - Café Mignon!</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laboriosam dolorum et! Est alias quam esse ducimus aliquid tempore at error libero iure magni odio, optio blanditiis molitia? <br</p>
-          </div>
-        </div>
-        
-      </section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laboriosam dolorum et! Est alias quam
+              esse ducimus aliquid tempore at error libero iure magni odio, optio blanditiis molitia? <br</p> </div>
+                </div> </section> <!--SMALL NEWS-->
+                <section class="small-news">
+                  <div class="small-news-card">
+                    <img src="./img/pancake-1776646_1280.jpg" alt="pancake">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laboriosam dolorum et! Est
+                      alias quam esse ducimus aliquid tempore at error libero iure magni odio, optio blanditiis
+                      mollitia? <br><a href="#">Vote here!</a></p>
+                  </div>
 
+                  <div class="small-news-card">
+                    <img src="./img/strawberry-2572624_1280.jpg" alt="pancake">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet omnis laborio et! Est
+                      alias quam esse ducimus aliquid tempore at error libero iure magni odio, optio blanditiis
+                      mollitia?<br> <a href="#">Vote here!</a></p>
+                  </div>
 
-      <!--SMALL NEWS-->
-    <section class="small-news">
-      <div class="small-news-card">
-        <img src= "./img/pancake-1776646_1280.jpg" alt="pancake">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laboriosam dolorum et! Est alias quam esse ducimus aliquid tempore at error libero iure magni odio, optio blanditiis mollitia? <br><a href="#">Vote here!</a></p>
+                  <div class="small-news-card">
+                    <img src="./img/pancakes-984439_1280.jpg" alt="pancake">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet omnis laboriosam
+                      dolorum et! Est alias quam esse ducimus aliquid error libero iure magni odio, optio blanditiis
+                      mollitia? <br><a href="#">Vote here!</a></p>
+                  </div>
 
-      </div>
+                  <div class="small-news-card">
+                    <img src="./img/pancakes-2413875_1280.jpg" alt="pancake">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet omnis laboriosam
+                      dolorum et! Est esse ducimus aliquid tempore at error libero iure magni odio, optio blanditiis
+                      mollitia? <br><a href="#">Vote here!</a></p>
+                  </div>
 
-      <div class="small-news-card">
-        <img src="./img/strawberry-2572624_1280.jpg" alt="pancake">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet omnis laborio et! Est alias quam esse ducimus aliquid tempore at error libero iure magni odio, optio blanditiis mollitia?<br> <a href="#">Vote here!</a></p>
+                  <div class="small-news-card">
+                    <img src="./img/pancakes-2372095_1280.jpg" alt="pancake">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet omnis laboriosam
+                      dolorum et! Est alias quam esse ducimus aliquid error libero iure magni odio, optio blanditiis
+                      mollitia?<br> <a href="#">Vote here!</a></p>
+                  </div>
 
-      </div>
+                  <div class="small-news-card">
+                    <img src="./img/pancakes-4410606_1280.jpg" alt="pancake">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet omnis laboriosam
+                      dolorum et! Est alias quam esse ducimus aliquid tempore at error libero iure magni odio, optio
+                      mollitia?<br> <a href="#">Vote here!</a></p>
+                  </div>
+                </section>
 
-      <div class="small-news-card">
-        <img src="./img/pancakes-984439_1280.jpg" alt="pancake">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet omnis laboriosam dolorum et! Est alias quam esse ducimus aliquid error libero iure magni odio, optio blanditiis mollitia? <br><a href="#">Vote here!</a></p>
-
-      </div>
-
-      <div class="small-news-card">
-        <img src="./img/pancakes-2413875_1280.jpg" alt="pancake">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet omnis laboriosam dolorum et! Est esse ducimus aliquid tempore at error libero iure magni odio, optio blanditiis mollitia? <br><a href="#">Vote here!</a></p>
-
-      </div>
-
-      <div class="small-news-card">
-        <img src="./img/pancakes-2372095_1280.jpg" alt="pancake">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet omnis laboriosam dolorum et! Est alias quam esse ducimus aliquid error libero iure magni odio, optio blanditiis mollitia?<br> <a href="#">Vote here!</a></p>
-
-      </div>
-
-      <div class="small-news-card">
-        <img src="./img/pancakes-4410606_1280.jpg" alt="pancake">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet omnis laboriosam dolorum et! Est alias quam esse ducimus aliquid tempore at error libero iure magni odio, optio mollitia?<br> <a href="#">Vote here!</a></p>
-
-      </div>
-    </section>
-
-    <footer class="footer">
-      <p>&copy Ann-Sofi Jönsson Technigo Bootcamp 2021</p>
-    </footer>
+                <footer class="footer">
+                  <p>&copy Ann-Sofi Jönsson Technigo Bootcamp 2021</p>
+                </footer>
   </body>
-</html>
+
+  </html>
