Removed unused code and unnessesary  spaceings. Fixed  indentation in css. Arranged h1-text away from animated logo and changed size on bigger screens. Tried to give more descriptive class name:  more-news-text. Changed <p> to H3 in heading-two section

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,6 @@
   </head>
   <body class="body">
     <header>
-    
       <img src="assets/jellyfish.png" alt="logo" class="logo">
       <h1>THE DAILY DEEP DIVE</h1>
       <nav>
@@ -18,20 +17,20 @@
         <a href="#">DEEPER</a>
         <a href="#">DEEPEST</a>
       </nav>
-
       <div class="hamburger">
         <div></div>
         <div></div>
         <div></div>
       </div>
-      
     </header>
     <section class="big-news-container">
       <img src="assets/danist-bviex5lwf3s-unsplash.jpg" alt="Jelly Fish">
       <div class="news-text">
         <h2 class="h2">Take a Deep Breath</h2>
-        <p class="heading-two"><strong>One, two, three...</strong></p></p>
-        <p class="hedline-two"><strong>Lets dive down to where there are no up so or down!</strong></p>
+        <section class="heading-two">
+          <h3>One, two, three...</h3>
+          <h3>Lets dive down to where there are no up so or down!</h3>
+        </section>
         <p class="blubb"> Blubb, blubb blubb blubb? Blubb, blubb  blllubb bluuuub, bluuuub. Bl, blubbblubb, bluuub. Bluub, blubb....</p> 
         <p class="blubb"> Blubb blubb blubb. Blubb bluuubb, blubb blubb. Blubb blluubb blubb blubb! Blubb,blubb blubb blubb!!! Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. </p>
         <p class="blubb-on-mobile">Blubb blubb blubb...</p>
@@ -52,11 +51,9 @@
         <img class="four-image" src="assets/jeffrey-hamilton-JtVyK2Sej2I-unsplash.jpg" alt="Jellyfish">
       </div> 
     </section>
-
-      <div class="h3-div"> 
+      <div class="more-news-text"> 
         <h3>Let's go even deeper...</h3>
       </div>
-
     <section class="more-news-container">
       <div >
         <img class="grid-img" src="assets/darren-chan-gAToI38WygU-unsplash.jpg" alt="Jellyfish"> 
@@ -107,8 +104,6 @@
         <img class="grid-img" src="assets/vino-li-UoZ_YPICC1s-unsplash.jpg" alt="Jellyfish">
       </div> 
     </section>
-
-
     <footer></footer>
   </body>
 </html>
