fix formating && remove commented style &

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <meta name="description" content="A dev new website" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <script src="./app.js"></script>
   </head>
   <body>
     <!-- START HEADER -->
@@ -24,19 +23,16 @@
           <div class="header-container">
             <!-- LOGO -->
             <a href="/" class="logo">
-              <img src="./assets/logo.svg" alt="" />
+              <img src="./assets/logo.svg" alt="logo" class="img" />
             </a>
 
             <!-- MOBILE NAVBAR -->
-            <a
-              href="javascript:void(0);"
-              onclick="menuToggle()"
-              class="hamburger-menu"
-              ><i class="fa fa-bars"></i
-            ></a>
+            <a href="#" onclick="menuToggle()" class="hamburger-menu">
+              <i class="fa fa-bars"></i>
+            </a>
           </div>
 
-          <nav id="main-menu-cnt">
+          <nav id="main-menu-cnt" class="main-menu-cnt">
             <ul class="main-menu">
               <li class="main-menu-items">
                 <a href="/">Home</a>
@@ -75,8 +71,8 @@
           <div class="big-news-content">
             <h1>
               <a href="./pages/news.html" target="_blank" class="news-title">
-                JavaScript World Conference by Frontend Love</a
-              >
+                JavaScript World Conference by Frontend Love
+              </a>
             </h1>
             <span>20 Topics</span>
             <span>100 Talks</span>
@@ -92,14 +88,15 @@
         </section>
 
         <section class="news-card-cnt">
-          <ul class="">
+          <ul>
             <li class="news-card shadow">
-              <a href="./pages/news.html" target="_blank" class="block"
-                ><img
+              <a href="./pages/news.html" target="_blank" class="block">
+                <img
                   src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
-                  alt=""
+                  alt="News Image"
                   class="res-img"
-              /></a>
+                />
+              </a>
               <div>
                 <h3>
                   <a href="./pages/news.html">What is Lorem Ipsum?</a>
@@ -111,12 +108,13 @@
               </div>
             </li>
             <li class="news-card shadow">
-              <a href="./pages/news.html" target="_blank" class="block"
-                ><img
+              <a href="./pages/news.html" target="_blank" class="block">
+                <img
                   src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
-                  alt=""
+                  alt="News Image"
                   class="res-img"
-              /></a>
+                />
+              </a>
               <div>
                 <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
@@ -126,12 +124,13 @@
               </div>
             </li>
             <li class="news-card shadow">
-              <a href="./pages/news.html" target="_blank" class="block"
-                ><img
+              <a href="./pages/news.html" target="_blank" class="block">
+                <img
                   src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
-                  alt=""
+                  alt="News Image"
                   class="res-img"
-              /></a>
+                />
+              </a>
               <div>
                 <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
@@ -141,12 +140,13 @@
               </div>
             </li>
             <li class="news-card shadow">
-              <a href="./pages/news.html" target="_blank" class="block"
-                ><img
+              <a href="./pages/news.html" target="_blank" class="block">
+                <img
                   src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
-                  alt=""
+                  alt="News Image"
                   class="res-img"
-              /></a>
+                />
+              </a>
               <div>
                 <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
@@ -156,12 +156,13 @@
               </div>
             </li>
             <li class="news-card shadow">
-              <a href="./pages/news.html" target="_blank" class="block"
-                ><img
+              <a href="./pages/news.html" target="_blank" class="block">
+                <img
                   src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
-                  alt=""
+                  alt="News Image"
                   class="res-img"
-              /></a>
+                />
+              </a>
               <div>
                 <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
@@ -171,12 +172,13 @@
               </div>
             </li>
             <li class="news-card shadow">
-              <a href="./pages/news.html" target="_blank" class="block"
-                ><img
+              <a href="./pages/news.html" target="_blank" class="block">
+                <img
                   src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
-                  alt=""
+                  alt="News Image"
                   class="res-img"
-              /></a>
+                />
+              </a>
               <div>
                 <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
@@ -186,12 +188,13 @@
               </div>
             </li>
             <li class="news-card">
-              <a href="./pages/news.html" target="_blank" class="block"
-                ><img
+              <a href="./pages/news.html" target="_blank" class="block">
+                <img
                   src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
-                  alt=""
+                  alt="News Image"
                   class="res-img"
-              /></a>
+                />
+              </a>
               <div>
                 <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
@@ -201,12 +204,13 @@
               </div>
             </li>
             <li class="news-card">
-              <a href="./pages/news.html" target="_blank" class="block"
-                ><img
+              <a href="./pages/news.html" target="_blank" class="block">
+                <img
                   src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
-                  alt=""
+                  alt="News Image"
                   class="res-img"
-              /></a>
+                />
+              </a>
               <div>
                 <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
@@ -225,5 +229,6 @@
     <footer class="footer">
       COPYRIGHT WITNESSES OF DEVNEWS ALL RIGHTS RESERVED
     </footer>
+    <script src="./app.js"></script>
   </body>
 </html>
